--- a/client/API/html/style.css
+++ b/client/API/html/style.css
@@ -11,3 +11,17 @@
     z-index: 9999;
     display: none;
 }
+
+#succes {
+    width: 100%;
+    height: 40%;
+    background-image: url(img/succes.png);
+    background-size: 15%;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    display: none;
+}
